syntax= "proto3";
package manager;
option go_package = "github.com/condemo/raspi-htmx-service/common/services/manager";

service ServiceManager {
  rpc GetServices(GetServicesRequest) returns (GetServicesResponse) {}
  rpc StartService(ServiceIdRequest) returns (RaspiService) {}
  rpc StopService(ServiceIdRequest) returns (RaspiService) {}

  // TODO: falta `UpdateConfig` y `GetConfig`
}

message ServiceIdRequest {
  int32 id = 1;
}

message RaspiService {
  int32 id = 1;
  string name = 2;
  bool status = 3;
  ServiceCardData data = 4;
}

message ServiceCardData {
  string icon = 1;
  string dataText = 2;
  string lastUpdated = 3;
}

message GetServicesRequest {}

message GetServicesResponse {
  repeated RaspiService services = 1;
}
